<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />



    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/detailslist" />

    <item
        android:id="@+id/navigation_calculation"
        android:icon="@drawable/ic_calculation"
        android:title="@string/otcalculator"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:title="@string/profile"
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"/>



</menu>
